--- a/app/src/main/res/layout/project_list_item.xml
+++ b/app/src/main/res/layout/project_list_item.xml
@@ -9,12 +9,14 @@
         android:layout_height="250dp" >
 
         <ImageView
+            android:id="@+id/projectBackgroundImg"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher" />
 
         <TextView
+            android:id="@+id/projectTitleTxt"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
