반투명 검정 배경 추가  - ARGB 개념 활용 (#8자리)

--- a/app/src/main/res/layout/project_list_item.xml
+++ b/app/src/main/res/layout/project_list_item.xml
@@ -15,13 +15,18 @@
             android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher" />
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="#88000000" />
+
         <TextView
             android:id="@+id/projectTitleTxt"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:text="프로젝트 제목 자리" />
 
 
