--- a/app/src/main/res/layout/activity_view_project_detail.xml
+++ b/app/src/main/res/layout/activity_view_project_detail.xml
@@ -18,6 +18,7 @@
             android:src="@mipmap/ic_launcher" />
 
         <ImageView
+            android:id="@+id/projectImg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#88000000" />
@@ -30,6 +31,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/titleTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="제목 자리"
@@ -37,10 +39,11 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/descriptionTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="프로젝트 설명 자리"
                 android:layout_marginTop="5dp"
+                android:text="프로젝트 설명 자리"
                 android:textColor="#FFFFFF"
                 android:textSize="12sp" />
 
