--- a/app/src/main/res/layout/activity_view_project_detail.xml
+++ b/app/src/main/res/layout/activity_view_project_detail.xml
@@ -51,5 +51,27 @@
 
     </FrameLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="현재 참여 인원" />
+
+        <TextView
+            android:id="@+id/userCountTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="m명"
+            android:textColor="#000000"
+            android:textSize="17sp" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
