인증 방법 표시 공간 추가

--- a/app/src/main/res/layout/activity_view_project_detail.xml
+++ b/app/src/main/res/layout/activity_view_project_detail.xml
@@ -73,5 +73,26 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="인증 방법" />
+
+        <TextView
+            android:id="@+id/proofMethodTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="인증 방법 자리"
+            android:textColor="#000000"
+            android:textSize="17sp" />
+
+    </LinearLayout>
 
 </LinearLayout>
